[package]
name = "dpar-utils"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]

[dependencies]
dpar = {path = "../dpar"}
colored = "1"
conllx = "0.10"
failure = "0.1"
getopts = "0.2"
indicatif = "0.9"
itertools = "0.8"
ordered-float = { version = "1", features = ["serde"] }
pest = "2"
protobuf = "1.4"
rust2vec = "0.5"
serde = "1.0"
serde_cbor = "0.6"
serde_derive = "1.0"
stdinout = "0.4"
tensorflow = "0.12"
tf-proto = { git = "https://github.com/danieldk/tf-proto-rs", tag = "v1.4.0" }
toml = "0.4"

[dev-dependencies]
lazy_static = "0.2"
