[package]
name = "dpar"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural network dependency parser"

[dependencies]
conllx = "0.9"
enum-map = "0.2"
error-chain = "0.11"
hdf5 = "0.4"
maplit = "1.0"
petgraph = "0.4"
protobuf = "1.4"
serde = "1.0"
serde_derive = "1.0"
tensorflow = "0.7"
tf-embed = { git = "https://github.com/danieldk/tf-embed-rs", tag = "v0.2.0" }
tf-proto = { git = "https://github.com/danieldk/tf-proto-rs", tag = "v1.4.0" }

[dev-dependencies]
lazy_static = "0.2"
pretty_assertions = "0.5"
