[package]
name = "dpar"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural network dependency parser"

[dependencies]
conllx = "0.10"
enum-map = "0.4"
failure = "0.1"
maplit = "1"
itertools = "0.8.0"
pest = "2"
pest_derive = "2"
petgraph = "0.4"
protobuf = "1.4"
serde = "1"
serde_derive = "1"
tensorflow = "0.10"
tf-embed = { git = "https://github.com/danieldk/tf-embed-rs", tag = "v0.4.0" }
tf-proto = { git = "https://github.com/danieldk/tf-proto-rs", tag = "v1.4.0" }

[dev-dependencies]
approx = "0.3"
flate2 = "1"
lazy_static = "0.2"
pretty_assertions = "0.5"
serde_yaml = "0.8"
