[package]
name = "dpar"
version = "0.1.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural network dependency parser"

[dependencies]
conllx = "0.10"
enum-map = "0.4"
failure = "0.1"
maplit = "1"
ndarray = "0.12"
pest = "2"
pest_derive = "2"
petgraph = "0.4"
protobuf = "1.4"
rust2vec = "0.5"
serde = "1"
serde_derive = "1"
tensorflow = "0.12"
tf-proto = { git = "https://github.com/danieldk/tf-proto-rs", tag = "v1.4.0" }

[dev-dependencies]
approx = "0.3"
flate2 = "1"
lazy_static = "1"
pretty_assertions = "0.5"
serde_yaml = "0.8"
